--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,11 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     compile 'me.relex:circleindicator:1.2.2@aar'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.volley:volley:1.1.0-rc1'
+    compile 'com.github.bumptech.glide:glide:4.2.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
+
 }
