--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AboutStoreActivity"></activity>
+        <activity android:name=".AboutStoreActivity" />
+        <activity android:name=".DiscoverActivity"></activity>
     </application>
 
 </manifest>
