--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,10 +25,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.AboutStoreActivity" />
-        <activity android:name=".activities.DiscoverActivity" />
+        <activity
+            android:name=".activities.DiscoverActivity"
+            android:theme="@style/AppTheme.NoActionBarTwo" />
         <activity android:name=".activities.LoginActivity" />
         <activity android:name=".activities.RegisterActivity" />
-        <activity android:name=".activities.TestClassForLogOut"/>
+        <activity android:name=".activities.TestClassForLogOut" />
     </application>
 
 </manifest>
